Add tests for the RootView Listener API.
Add tests for the root view listener API.

Flag: android.view.flags.root_view_changed_listener
Bug: 394397033
Test: atest CtsViewTestCases
Change-Id: Iee255b6778162ede47f18ff43f15493aa0a6e806